# password-manager

./: .gitignore  Cargo.toml  README.md
src/: error.rs  lib.rs  main.rs
src/cli/: commands.rs  mod.rs
src/crypto/: encryption.rs  generator.rs  key_derivation.rs  mod.rs
src/models/: database_file.rs  entry.rs  mod.rs
src/storage/: database.rs  mod.rs
src/utils/: clipboard.rs  mod.rs  secure_string.rs
