[package]
name = "password-manager"
version = "0.1.0"
edition = "2021"
authors = ["lachlon"]
description = "A secure CLI password manager with AES-256-GCM encryption"
license = "MIT OR Apache-2.0"

[[bin]]
name = "pwm"
path = "src/main.rs"

[dependencies]
# CLI parsing - industry standard with derive API
clap = { version = "4.5", features = ["derive", "env"] }

# Encryption - RustCrypto's security-audited AES-256-GCM
aes-gcm = "0.10"

# Key derivation - Argon2id (password hashing competition winner)
argon2 = { version = "0.5", features = ["std"] }

# Secure memory - zeroize sensitive data on drop
zeroize = { version = "1.8", features = ["derive"] }

# Serialization - efficient binary format
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Crypto RNG - secure random for salts/nonces/passwords
rand = "0.8"
getrandom = "0.2"

# Clipboard - maintained by 1Password
arboard = "3.4"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Secure password input
rpassword = "7.3"

# Constant-time comparison (prevent timing attacks)
subtle = "2.6"

# UUID generation for entry IDs
uuid = { version = "1.10", features = ["v4", "serde"] }

# Shell expansion for tilde in paths
shellexpand = "3.1"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
